results/SpecGenBench/4-shot/log-MaxInArray-2023_11_28_00_04_37.txt
class MaxInArray {
    //@ requires \forall int i; 0 <= i && i < arr.length; arr[i] <= Integer.MAX_VALUE;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; arr[i] <= \result);
    public int maxElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res >= a[i]);
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] > res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: variable i is already defined in method maxElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res >= a[i]);
                                     ^
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res >= a[i]);
                                                      ^
  symbol:   variable a
  location: class MaxInArray
/home/max/Documents/JMLGPT/tmp/MaxInArray.java:8: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res >= a[i]);
                                                                       ^
  symbol:   variable a
  location: class MaxInArray
3 errors

